--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -14,7 +14,7 @@
 	"observability": {
 		"enabled": true
 	},
-	"compatibility_flags": ["nodejs_compat"]
+	"compatibility_flags": ["nodejs_compat"],
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -32,7 +32,13 @@
 	 * Environment Variables
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 	 */
-	// "vars": { "MY_VARIABLE": "production_value" },
+	"vars": {
+		"AIRTABLE_BASE_ID": "appqHy8DtTYdAPtNv",
+		"AIRTABLE_TABLE_ID": "tbli0pHIUcLPZ3WMF",
+		"AIRTABLE_READ_TOKEN": "FIXME",
+		"CACHE_DURATION_IN_SEC": "3600",
+		"GENERAL_CATEGORY": "General"
+	}
 	/**
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
