--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"prebuild": "pnpm generate-data"
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20250410.0",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
